--- a/css/style.css
+++ b/css/style.css
@@ -222,9 +222,9 @@ footer a {
 }
 .apps_hobbies {
   position: relative;
-  left: 20%;
-  margin: 30px 10px 0 10px;
-  padding: 20px;
+  align-items: center;
+  margin: 30px 50px 0 100px;
+  padding: 50px;
 }
 .skills {
   height: 70px;
