--- a/css/style.css
+++ b/css/style.css
@@ -212,11 +212,11 @@ button {
 }
 footer a {
   font-size: 20px;
-  color: #b336fe !important;
+  color: var(--primary-color) !important;
   text-decoration: none;
 }
 footer small {
-  color: #b336fe !important;
+  color: var(--primary-color) !important;
 }
 footer {
   background: #131313;
