--- a/css/resume_style.css
+++ b/css/resume_style.css
@@ -22,6 +22,7 @@ body {
 .homepage-link {
   display: block;
   text-align: center;
+  color: var(--secondary-color) !important;
 }
 .timelime-wrapper {
   min-height: 100vh;
