updated hompage link color

--- a/css/project_style.css
+++ b/css/project_style.css
@@ -22,7 +22,7 @@ body {
 .homepage-link {
   display: block;
   text-align: center;
-  color: var(--secondary-color) !important;
+  color: var(--box-shadow) !important;
 }
 .row {
   border-bottom: 2px solid white;
