--- a/css/project_style.css
+++ b/css/project_style.css
@@ -34,11 +34,11 @@ small {
   color: azure;
   opacity: 40%;
 }
-.iframe_content {
+iframe {
   border: 1px solid purple;
-  border-radius: 5px;
+  border-radius: 10px;
   align-items: center;
-  padding-top: 10px;
+  padding: 0 !important;
 }
 .other-projects {
   text-align: center;
