--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,20 @@ button {
   border: 1px solid #ccc;
   margin-top: 30px;
 }
+#english,
+#german,
+#filipino {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  line-height: 100px;
+  color: #fff;
+  text-align: center;
+  background: #b336fe;
+  margin-left: 15px;
+  margin-bottom: 10px;
+}
+
 footer a {
   font-size: 20px;
   color: var(--primary-color) !important;
