--- a/css/style.css
+++ b/css/style.css
@@ -229,8 +229,7 @@ button {
   color: #fff;
   text-align: center;
   background: #b336fe;
-  margin-left: 15px;
-  margin-bottom: 10px;
+  margin: 15px;
 }
 
 footer a {
