--- a/css/style.css
+++ b/css/style.css
@@ -219,9 +219,7 @@ button {
   border: 1px solid #ccc;
   margin-top: 30px;
 }
-#english,
-#german,
-#filipino {
+.langauge-class {
   width: 100px;
   height: 100px;
   border-radius: 50%;
