--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,25 @@ button {
   margin-left: 70px;
 }
 
+.form_container {
+  padding: 10px;
+  background-color: #9575de;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  box-shadow: 0px 4px 30px 0px rgb(214, 109, 214);
+  margin-top: 20px;
+  width: 80%;
+  align-items: center;
+  position: relative;
+  left: 17%;
+}
+
+.button_container,
+#title_AI {
+  position: relative;
+  left: 5%;
+}
+
 @keyframes scroll {
   0% {
     transform: translateX(0);
