--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,11 @@ body {
     position: relative;
     left: 15%;
   }
+  #experience {
+    width: 1000px !important;
+    position: relative;
+    left: 40%;
+  }
 }
 .navbar-logo {
   font-family: "Great Vibes", serif;
