--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
     position: relative;
     left: 15%;
   }
-  #experience {
+  #experience-container {
     position: relative;
     right: -50%;
   }
