--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,10 @@ body {
     position: relative;
     left: 5%;
   }
+  #education-container {
+    position: relative;
+    left: 5%;
+  }
 }
 .navbar-logo {
   font-family: "Great Vibes", serif;
