--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
   }
   #experience-container {
     position: relative;
-    left: 5%;
+    right: 5%;
   }
   #education-container {
     position: relative;
