--- a/css/project_style.css
+++ b/css/project_style.css
@@ -51,3 +51,7 @@ a {
   background: none !important;
   border: 1px solid var(--primary-color) !important;
 }
+.technical_skills {
+  color: grey;
+  font-size: smaller;
+}
