--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@
   --body-color: #020202;
 }
 body {
-  background: url(/images/black_purple_white_flow.jpg);
+  background: url(/images/black_purple_white_flow.jpg) no-repeat center center
+    fixed;
   background-size: cover;
   color: var(--primary-color);
   font-family: "Roboto Serif", serif;
@@ -26,12 +27,13 @@ body {
     bottom: 60%;
   }
   #ginelle {
-    width: 390px !important;
-    height: 500px !important;
+    width: 390px;
+    height: 500px;
     position: relative;
     left: 10%;
+    padding-bottom: 25px;
   }
-  .langauge-class {
+  .language-class {
     position: relative;
     left: 15%;
   }
@@ -47,15 +49,19 @@ body {
     position: relative;
     left: 1%;
   }
+}
+@media (max-width: 600px) {
+  .side-nav {
+    display: none;
+  }
   #ginelle {
-    padding-bottom: 25px;
+    width: 80%;
   }
 }
 
 .navbar-logo {
   font-family: "Great Vibes", serif;
   font-weight: 600;
-  font-style: normal;
   font-size: 32px;
   color: var(--secondary-color);
   margin: 25px 10px 130px 22px;
@@ -65,6 +71,7 @@ body {
   border: 3px solid var(--secondary-color);
   background: var(--primary-color);
   border-radius: 10px;
+  transition: ease-in-out 100ms;
 }
 .navbar-logo:hover {
   color: var(--primary-color);
@@ -74,15 +81,18 @@ body {
 }
 .side-nav {
   width: 130px;
-  height: 100%;
+  height: 100vh;
   background: var(--body-color);
   position: fixed;
   top: 0;
   left: 0;
+  transition: left 0.3s ease-in-out;
+}
+.hidden {
+  left: -130px;
 }
 .nav-links {
   list-style: none;
-  position: relative;
   padding-left: 20px;
 }
 .nav-links li {
@@ -99,7 +109,6 @@ body {
 .container {
   margin-left: 150px;
   max-width: 90%;
-  align-items: center;
   text-align: justify;
 }
 #ginelle {
@@ -108,8 +117,6 @@ body {
 }
 #ginelle_doubek {
   font-family: "Fleur De Leah", serif;
-  font-weight: 400;
-  font-style: normal;
   font-size: 100px;
   color: #9d75d9;
   background-image: linear-gradient(
