--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ body {
   }
   #ginelle {
     width: 80%;
+    height: auto;
   }
 }
 
@@ -148,7 +149,14 @@ body {
   text-decoration: none;
   color: var(--primary-color);
 }
-
+.education-description h3,
+.job-description h3 {
+  font-size: 24px;
+}
+.education-description h4,
+.job-description h4 {
+  font-size: 18px;
+}
 .job-description,
 .education-description {
   background-color: #1f0725;
@@ -299,7 +307,7 @@ button {
   border: 1px solid #ccc;
   margin-top: 30px;
 }
-.langauge-class {
+.language-class {
   width: 100px;
   height: 100px;
   border-radius: 50%;
